corrected z index of header portion so other section doesn't overlap it.

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ header {
     position:fixed;
     top:0;
     width:100%;
+    z-index: 2;
     }
 
 nav ul{
